--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -1,8 +1,4 @@
-<h1 class="page-title" lang="jp"><%= @word.japanese %></h1>
-
-<div class="actions">
-  <%= link_to "Words", words_path, class: "button-purple back-button" %>
-</div>
+<h1 class="page-title">Word details</h1>
 
 <br/>
 
