--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -15,13 +15,20 @@ nav {
     float: left;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 6px 12px;
     text-decoration: none;
     font-size: 1em;
     background-color: #374151;
     border: none;
     &:hover {
       background-color: #1F2937;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .icon-subtext {
+      font-size: 0.7em;
     }
   }
   .center-links {
