--- a/app/assets/stylesheets/jpstudy/square.scss
+++ b/app/assets/stylesheets/jpstudy/square.scss
@@ -9,9 +9,15 @@
     color: #fff;
     font-size: 1em;
     display: inline-block;
+
     &:hover {
       cursor: pointer;
     }
+    // .icon-solid,
+    // .icon-outline {
+    //   height: 24px;
+    //   margin: -2px 0px -2px -8px;
+    // }
   }
   .embedded-checkout-link-html-hidden-textarea,
   .checkout-button-html-hidden-textarea {
