--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
 </div>
 
 <div class="square" data-controller="square">
-  <% if !@user.active_subscription.present? %>
+  <% if @user.active_subscription.present? %>
     <h3 class="title">Manage your subscription</h3>
     <p>
       A monthly subscription is required to unlock full access to the site after
