--- a/app/views/user_mailer/confirm_subscription_email.text.erb
+++ b/app/views/user_mailer/confirm_subscription_email.text.erb
@@ -1,7 +1,7 @@
 Hi there! Thank you for subscribing to jpstudy. To connect your shiny
 new subscription to your account, please log in using this link:
 
-<%= @url %>
+<%= login_url(ref_id: @encrypted_square_customer_id) %>
 
 Thank you for helping make jpstudy a success! We wish you the best
 of luck with your studies. 頑張って!
