Add added_on column to exported CSV

--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -30,7 +30,7 @@
     </div>
 
     <div class="source">
-      <span class="added-on">Added&nbsp;<%= word.created_at.strftime("%m/%d/%Y") %></span>
+      <span class="added-on">Added&nbsp;<%= word.added_on %></span>
       <span class="source-name">&gt;&nbsp;<%= word.source_name %></span>
       <span class="source-reference"><%= word.source_reference %></span>
     </div>
