--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,9 @@
 
 <p>
   <strong>
-    Trail <%= @user.trial_active? ? "expires" : "expired" %>:
+    Trial <%= @user.trial_active? ? "expires" : "expired" %>:
   </strong>
-  <%= @user.trail_ends_at.utc %>
+  <%= @user.trial_ends_at.utc %>
 </p>
 
 <div class="user-actions">
