--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -28,6 +28,18 @@
         outline-color: #3B82F6;
       }
     }
+    textarea {
+      font-size: 1.1em;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      padding: 12px;
+      height: 12px;
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
+      height: auto; // required to make html row setting work
+      &:focus {
+        outline-color: #3B82F6;
+      }
+    }
   }
   .form-actions {
     padding-top: 14px;
@@ -62,7 +74,6 @@
     padding-top: 6px;
   }
 }
-
 
 .new-word,
 .back-button {
@@ -107,6 +118,14 @@
     }
   }
 
+  .note .tooltip {
+    float: right;
+    margin-top: -3px;
+    color: #D1D5DB;
+    padding: 1px;
+    font-size: 0.8em;
+  }
+
   .delete button {
     margin-right: -9px;
   }
@@ -135,6 +154,41 @@
   }
   .resources {
     a { text-decoration: none; }
+  }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #111827;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 120%;
+    left: 50%;
+    margin-left: -60px;
+  }
+
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #111827 transparent;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
   }
 }
 
