Simplify Square UX, remove stimulus controller, clean up dates

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
   <strong>
     Trial <%= @user.trial_active? ? "expires" : "expired" %>:
   </strong>
-  <%= @user.trial_ends_at.utc %>
+  <%= @user.trial_ends_at.strftime("%m/%d/%Y") %>
 </p>
 
 <div class="user-actions">
@@ -27,7 +27,7 @@
   <%= button_to("Delete your account", user_path(@user), method: :delete, class: "button-red", data: { controller: "confirmation", confirmation_message_value: "Are you sure you want to delete your account? This action is permanent and you will cause you to lose access to the entire site.", action: "confirmation#confirm" }) %>
 </div>
 
-<div class="square" data-controller="square">
+<div class="square">
   <% if @user.active_subscription.present? %>
     <h3 class="title">Manage your subscription</h3>
     <p>
@@ -38,20 +38,18 @@
     </p>
     <p>
       <strong>Start date:</strong>
-      <%= @user.active_subscription.start_date %>
+      <%= @user.active_subscription.start_date.strftime("%m/%d/%Y") %>
     </p>
     <p>
       <strong>Next charge date:</strong>
-      <%= @user.active_subscription.next_charge_date %>
+      <%= @user.active_subscription.next_charge_date.strftime("%m/%d/%Y") %>
     </p>
     <a
       class="square-button manage-subscription-button"
       target="_blank"
-      data-square-target="checkoutButton"
-      data-action="square#showCheckoutWindow"
       href="<%= @user.active_subscription.self_management_link %>"
     >
-      Modify subscription on Square
+      Manage subscription with Square
     </a>
   <% else %>
     <h3 class="title">Subscribe</h3>
@@ -63,9 +61,6 @@
     </p>
     <a
       class="square-button checkout-button"
-      target="_blank"
-      data-square-target="checkoutButton"
-      data-action="square#showCheckoutWindow"
       href="https://square.link/u/oricGJt8?src=embed"
     >
       Subscribe with Square
