Point at new domain

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -68,7 +68,7 @@ http {
 
 	server {
 		listen <%= ENV["PORT"] %>;
-		server_name jpstudy.herokuapp.com;
+		server_name jpstudy.app;
     keepalive_timeout 5;
     charset utf-8;
     root /var/www/jpstudy/current/public;
