Tooltip styling cleanup

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -118,12 +118,11 @@
     }
   }
 
-  .note .tooltip {
+  .note {
     float: right;
-    margin-top: -3px;
+    margin: -3px 1px 0px 1px;
     color: #D1D5DB;
     padding: 1px;
-    font-size: 0.8em;
   }
 
   .delete button {
@@ -159,36 +158,36 @@
   .tooltip {
     position: relative;
     display: inline-block;
-  }
-
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #111827;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    top: 120%;
-    left: 50%;
-    margin-left: -60px;
-  }
-
-  .tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent transparent #111827 transparent;
-  }
-
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
+    &:hover {
+      .tooltiptext {
+        visibility: visible;
+      }
+    }
+    .tooltiptext {
+      visibility: hidden;
+      width: 120px;
+      background-color: #374151;
+      color: #fff;
+      text-align: center;
+      border-radius: 6px;
+      padding: 5px;
+      position: absolute;
+      z-index: 1;
+      top: 120%;
+      left: 50%;
+      margin-left: -60px;
+      font-size: 0.8em;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: transparent transparent #374151 transparent;
+      }
+    }
   }
 }
 
