Add spinner when card created button is checked

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -116,6 +116,31 @@
         color: #10B981;
       }
     }
+    &:disabled {
+      cursor: not-allowed;
+      .icon-solid,
+      .icon-outline {
+        &:hover {
+          cursor: not-allowed;
+        }
+      }
+    }
+  }
+
+  .loader {
+    border: 3px solid #fff; /* negative space */
+    border-top: 3px solid #D1D5DB; /* spinning part */
+    border-bottom: 3px solid #D1D5DB; /* spinning part */
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    animation: spin 1s linear infinite;
+    margin-right: 2px;
+    margin-top: 1px;
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   }
 
   .note {
