--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -39,12 +39,18 @@
 
     <div class="translation">
       <span class="japanese" lang="jp"><%= word.japanese %></span>
-      <span class="english">(<%= word.english %>)</span>
+      <span class="english">
+        <%= heroicon "chevron-right", variant: :outline, options: { class: "right-arrow" } %>
+        <%= word.english %>
+      </span>
     </div>
 
     <div class="source">
-      <span class="added-on">Added&nbsp;<%= word.added_on %></span>
-      <span class="source-name">&gt;&nbsp;<%= word.source_name %></span>
+      <span class="added-on">Added <%= word.added_on %></span>
+      <span class="source-name">
+        <span class="large-only">from </span>
+        <%= word.source_name %>,
+      </span>
       <span class="source-reference"><%= word.source_reference %></span>
     </div>
 
