Small UX & style cleanup changes

--- a/app/assets/stylesheets/jpstudy/static_pages.scss
+++ b/app/assets/stylesheets/jpstudy/static_pages.scss
@@ -1,7 +1,7 @@
 .about-page,
 .word-list-instructions-page {
   h1.title {
-    margin: 32px 0px;
+    margin: 12px 0px 32px 0px;
     @media (max-width: 600px) {
       margin: 12px 0px;
     }
