--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="about-page">
-  <h1 class="title">jpstudy</h1>
+  <h1 class="title">jpstudy 👋</h1>
 
   <p>
     Welcome to jpstudy! The site is currently under construction and is considered to be in an alpha release only. If you want to be one of the first to get started creating word lists for your Japanese language study, feel free to <%= link_to("sign up", signup_path) %> and get started today. There are still several key features being added so expect to see the tool grow in the coming months, but we plan to support any migrations required so that no user generated content is lost.
