--- a/app/assets/stylesheets/jpstudy/component_styles.scss
+++ b/app/assets/stylesheets/jpstudy/component_styles.scss
@@ -1,4 +1,5 @@
 .button-red {
+  -webkit-appearance: none;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -17,6 +18,7 @@
 }
 
 .button-purple {
+  -webkit-appearance: none;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -35,6 +37,7 @@
 }
 
 .button-pink {
+  -webkit-appearance: none;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -53,6 +56,7 @@
 }
 
 .button-blue {
+  -webkit-appearance: none;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
