Specify button font weight

--- a/app/assets/stylesheets/jpstudy/component_styles.scss
+++ b/app/assets/stylesheets/jpstudy/component_styles.scss
@@ -1,5 +1,6 @@
 .button-red {
   -webkit-appearance: none;
+  font-weight: 400;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -19,6 +20,7 @@
 
 .button-purple {
   -webkit-appearance: none;
+  font-weight: 400;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -38,6 +40,7 @@
 
 .button-pink {
   -webkit-appearance: none;
+  font-weight: 400;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
@@ -57,6 +60,7 @@
 
 .button-blue {
   -webkit-appearance: none;
+  font-weight: 400;
   text-decoration: none;
   padding: 8px 16px;
   border-radius: 0.6em;
