Add stats page and condense import / export pages

--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -48,7 +48,7 @@ nav {
     }
   }
   @media (max-width: 350px) {
-    .import-link, .export-link {
+    .in-out-link {
       display: none;
     }
   }
