--- a/app/assets/stylesheets/jpstudy/users.scss
+++ b/app/assets/stylesheets/jpstudy/users.scss
@@ -50,3 +50,10 @@
     margin: 12px 0px 0px 0px;
   }
 }
+
+.user-stats-page {
+  .contact {
+    font-style: italic;
+    margin-top: 32px;
+  }
+}
