--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,15 @@
           <%= heroicon "collection" %>
           <small class="icon-subtext">Words</small>
         <% end %>
-        <%= link_to(import_words_path, class: "import-link") do %>
-          <%= heroicon "upload" %>
-          <small class="icon-subtext">Import</small>
+        <% if @current_user %>
+          <%= link_to(stats_user_path(@current_user)) do %>
+            <%= heroicon "presentation-chart-bar" %>
+            <small class="icon-subtext">Stats</small>
+          <% end %>
         <% end %>
-        <%= link_to(export_words_path, class: "export-link") do %>
-          <%= heroicon "download" %>
-          <small class="icon-subtext">Export</small>
+        <%= link_to(in_out_words_path, class: "in-out-link") do %>
+          <%= heroicon "switch-vertical" %>
+          <small class="icon-subtext">I/O</small>
         <% end %>
         <%= link_to(about_path) do %>
           <%= heroicon "heart" %>
